--- a/liquid/templates/corporate/main.html
+++ b/liquid/templates/corporate/main.html
@@ -9,6 +9,13 @@
             <p>ACM members at the University of Illinois are some of the most skillful, dedicated Computer Science and Engineering students in the world. The corporate relations committee and jobs mailing list make it easy for employers and sponsors to interact with ACM members.</p>
 
             <section>
+                <h2>Get involved</h2>
+                <p>The best way for companies to get involved with ACM@UIUC is to become a part of our corporate sponsorship program. If you have any questions please e-mail <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
+                <ul>
+                    <li><a href="{% url sponsorship_info %}">More information on sponsoring</a></li>
+                </ul>
+            </section>
+            <section>
                 <h2>Post a job ad</h2>
                 <p>Your advertisement will automatically be included in the next issue of ACM's weekly jobs e-mail newsletter. This newsletter reaches over 600 undergraduate and graduate students in Computer Science, Electrical and Computer Engineering, and related fields.</p>
                 <ul>
