--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -79,9 +79,9 @@
    </div>
    
    <div class="span4">
-     <h3>GitHub</h3>
-     <p>Code straight from the ACM@UIUC GitHub</p>
-     <p><a class="btn" href="http://github.com/acm-uiuc/">View GitHub &raquo;</a></p>
+     <h3>Sponsor</h3>
+     <p>The best way to get involved with ACM@UIUC is to become a part of our corporate sponsorship program!</p>
+     <p><a class="btn" href="{% url sponsorship_info %}">Learn more &raquo;</a></p>
     </div>
 
   
