--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -8,6 +8,7 @@
     <!-- Le styles -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
     {% block top_styles %}
     {% endblock %}
 
@@ -82,7 +83,11 @@
     </div> <!-- /container -->
 
     <footer class="container">
-        ACM@UIUC | <a href="tel:12173335828">(217)-333-5828</a> | <a href="mailto:acm@illinois.edu">acm@illinois.edu</a> | Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
+        ACM@UIUC | 
+        <a href="tel:12173335828">(217)-333-5828</a> | 
+        <a href="mailto:acm@illinois.edu">acm@illinois.edu</a> | 
+        Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801 | 
+        <a class="icon ion-social-github footer-icon" href="http://github.com/acm-uiuc/"></a><a class="icon ion-social-twitter footer-icon" href="https://twitter.com/acmuiuc"></a><a class="icon ion-social-facebook footer-icon" href="https://www.facebook.com/acmuiuc"></a>
     </footer>
 
     <!-- Le javascript
@@ -90,6 +95,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-1.8.3.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.imagesloaded.js"></script>
+    <script src="/static/js/masonry.pkgd.min.js"></script>
+    <script src="/static/js/app.js"></script>
     {% block bottom_scripts %}
     {% endblock %}
   </body>
