--- a/liquid/templates/intranet/resume_manager/account_form.html
+++ b/liquid/templates/intranet/resume_manager/account_form.html
@@ -7,7 +7,7 @@
 <header class="page-header">
 <h1>{{ page_title }}</h1>
 </header>
-<form class="well" method="post">
+<form class="well" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form|bootstrap }}
   <div class="control-group">
