--- a/liquid/templates/vpn_required.html
+++ b/liquid/templates/vpn_required.html
@@ -5,7 +5,7 @@
    <h3>Please login to one of the following before continuing:</h3>
    <span style="font-size:18px">
       <ul>
-         <li>IllinoisNet <i>(does not require VPN)</i></li><br>
+         <li>IllinoisNet <i>(does not require VPN)</i></li><br />
          <li>Another network <b><i>(requires VPN)</b></i></li>
      </ul>
    </span>
