--- a/liquid/templates/vpn_required.html
+++ b/liquid/templates/vpn_required.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-   <h1>You must authenticate with UIUC to access this page.</h2>
+   <h1>You must authenticate with UIUC to access this page.</h1>
    <br />
    <h3>Please login to one of the following before continuing:</h3>
    <span style="font-size:18px">
       <ul>
-         <li>IllinoisNet <i>(does not require VPN)</i></li><br />
-         <li>Another network <b><i>(requires VPN)</b></i></li>
+         <li>IllinoisNet <em>(does not require VPN)</em></li><br>
+         <li>Another network <strong><em>(requires VPN)</strong></em></li>
      </ul>
    </span>
 {% endblock %}
