Simplify all the things

--- a/liquid/templates/vpn_required.html
+++ b/liquid/templates/vpn_required.html
@@ -1,12 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-   <h1>You must authenticate with UIUC to access this page.</h1>
-   <br />
-   <h3>Please login to one of the following before continuing:</h3>
-   <span style="font-size:18px">
-      <ul>
-         <li>IllinoisNet <em>(does not require VPN)</em></li><br>
-         <li>Another network <strong><em>(requires VPN)</strong></em></li>
-     </ul>
-   </span>
+   <h2>Please login to the <a href='http://cites.illinois.edu/vpn'>CITES VPN</a> or <a href='http://cites.illinois.edu/wireless/wpa2/'>IllinoisNet</a> before continuing.</h2>
 {% endblock %}
