Changed the text on the VPN page

--- a/liquid/templates/vpn_required.html
+++ b/liquid/templates/vpn_required.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-   <h2>Please login to the <a href='http://cites.illinois.edu/vpn'>CITES VPN</a> or <a href='http://cites.illinois.edu/wireless/wpa2/'>IllinoisNet</a> before continuing.</h2>
+	<h2>You are currently outside of the campus network.</h2>
+	<p>You must connect to the campus network to continue to this resource. The only way to do so is...</p>
+	<ul>
+		<li>Connect to the IllinoisNet wireless network.</li>
+		<li>Connect to the <a href='http://cites.illinois.edu/vpn'>CITES VPN service</a>.</li>
+	</ul>
 {% endblock %}
