Yet another hack night

--- a/liquid/templates/intranet/caffeine_manager/leaderboard.html
+++ b/liquid/templates/intranet/caffeine_manager/leaderboard.html
@@ -11,7 +11,7 @@
 
 <table class="table table-striped table-bordered">
   <tr>
-    <th class='caffeine-leaderboard-1'>#</tn>
+    <th class='caffeine-leaderboard-1'>#</th>
     <th>Name</th>
     <th class='caffeine-leaderboard-3'>Calories</th>
   </tr>
@@ -32,7 +32,7 @@
 <h4>Caffeine consumed (mg)</h4>
 <table class="table table-striped table-bordered caffeine-leaderboard">
   <tr>
-    <th class='caffeine-leaderboard-1'>#</tn>
+    <th class='caffeine-leaderboard-1'>#</th>
     <th>Name</th>
     <th class='caffeine-leaderboard-3'>Caffeine (mg)</th>
   </tr>
@@ -52,7 +52,7 @@
 <h4>Money spent</h4>
 <table class="table table-striped table-bordered caffeine-leaderboard">
   <tr>
-    <th class='caffeine-leaderboard-1'>#</tn>
+    <th class='caffeine-leaderboard-1'>#</th>
     <th>Name</th>
     <th class='caffeine-leaderboard-3'>Spent</th>
   </tr>
@@ -72,7 +72,7 @@
 <h4>Sodas bought</h4>
 <table class="table table-striped table-bordered caffeine-leaderboard">
   <tr>
-    <th class='caffeine-leaderboard-1'>#</tn>
+    <th class='caffeine-leaderboard-1'>#</th>
     <th>Name</th>
     <th class='caffeine-leaderboard-3'>Sodas</th>
   </tr>
