--- a/liquid/templates/intranet/caffeine_manager/user/edit_user.html
+++ b/liquid/templates/intranet/caffeine_manager/user/edit_user.html
@@ -12,8 +12,13 @@
 
     <br />
     <div style="float: right" >
-        <button type="submit" class="btn btn-primary">Update</button>
-        <a href="/intranet/caffeine/" class="btn btn-secondary">Cancel</a>
+      {% if is_transfer %}
+        <button type="submit" class="btn btn-danger">Transfer</button>
+      {% else %}     
+         <button type="submit" class="btn btn-primary">Edit</button>
+      {% endif %}
+         
+      <a href="/intranet/caffeine/" class="btn btn-secondary">Cancel</a>
     </div>
     <br />
 
