--- a/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
+++ b/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
@@ -13,7 +13,7 @@
   <a class="btn" href="/intranet/caffeine/stats">Leaderboard</a>
 </div>
 
-{% if sodasPage.end_index != 0 %}
+{% if sodasPage.end_index %}
 
 <table class="table table-striped table-bordered">
   <tr>
