--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -25,7 +25,7 @@
                <a href="/intranet/chroma">Chroma Lights</a>
             </li>
             <li{% if page == 'caffeine' %} class='active'{% endif %}>
-               <a href="/intranet/caffeine">Caffeine</a>
+               <a href="/intranet/caffeine/soda">Caffeine</a>
             </li>
             <li{% if page == 'members' %} class='active'{% endif %}>
               <a href="/intranet/members">Member Database</a>
