--- a/liquid/templates/intranet/caffeine_manager/user/edit_user.html
+++ b/liquid/templates/intranet/caffeine_manager/user/edit_user.html
@@ -1,26 +1,30 @@
 {% extends "intranet/base.html" %}
 {% load bootstrap %}
 
+{% block top_styles %}
+    <link href="/static/css/caffeine-mgr.css" rel="stylesheet">
+{% endblock %}
+
 {% block intranet_content %}
 <header>
-    <h1>Edit User</h1>
+    <h1>{% if is_transfer %}Transfer Credits{% else %}Update Balance{% endif %}</h1>
 </header>
 
 <form class="well" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form }}
+    <div>
+      {{ form }}
+    </div>
 
-    <br />
-    <div style="float: right" >
+    <div id='edit-user-buttons'>
       {% if is_transfer %}
         <button type="submit" class="btn btn-danger">Transfer</button>
       {% else %}     
-         <button type="submit" class="btn btn-primary">Edit</button>
+         <button type="submit" class="btn btn-primary">Update</button>
       {% endif %}
          
       <a href="/intranet/caffeine/" class="btn btn-secondary">Cancel</a>
     </div>
-    <br />
 
 </form>
 {% endblock %}
