--- a/liquid/static/css/caffeine-mgr.css
+++ b/liquid/static/css/caffeine-mgr.css
@@ -6,34 +6,34 @@
   width: 100px;
 }
 
-#edit-user-buttons {
+.edit-user-buttons {
    float: right;
    position: relative;
    top: -23px;
    left: 5px;
 }
 
-#edit-tray-buttons {
+.edit-tray-buttons {
    float: right;
    position: relative;
    top: -13px;
    left: -3px;
 }
 
-#edit-soda-buttons {
+.edit-soda-buttons {
    float: right;
    position: relative;
    top: -7px;
 }
 
-#view-user-buttons {
+.view-user-buttons {
    float: right;
    position: relative;
    top: -5px;
    padding-right: 20px;
 }
 
-#view-user-header {
+.view-user-header {
    font-size: 26px;
    padding-bottom:11px;
    vertical-align: text-bottom;
