--- a/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
+++ b/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
@@ -1,21 +1,21 @@
-{% extends "intranet/base.html" %}
+{% extends 'intranet/base.html' %}
 {% load bootstrap_pagination %}
 {% load bootstrap %}
 
 {% block intranet_content %}
 <h2>All sodas</h2>
-<div class="well">
-    <a class="btn btn-primary" href="/intranet/caffeine/trays/">Trays</a>
+<div class='well'>
+    <a class='btn btn-primary' href='{% url cm_trays_view %}'>Trays</a>
     {% if is_caffeine_admin %}
-        <a class="btn btn-success" href="/intranet/caffeine/soda/add">Add soda</a>
+        <a class='btn btn-success' href='{% url cm_soda_add %}'>Add soda</a>
     {% endif %}
-    <a class="btn" href="/intranet/caffeine/user">Users</a>
-    <a class="btn" href="/intranet/caffeine/stats">Leaderboard</a>
+    <a class='btn' href='{% url cm_user_view %}'>Users</a>
+    <a class='btn' href='{% url cm_stats %}'>Leaderboard</a>
 </div>
 
 {% if sodasPage.end_index %}
 
-<table class="table table-striped table-bordered">
+<table class='table table-striped table-bordered'>
     <tr>
         <th>Name</th>
         <th>Calories</th>
@@ -36,15 +36,15 @@
         <td>{{ s.votes.count }}</td>
         <td>
             {% if is_caffeine_admin %}
-                <a class="btn btn-primary btn-small" href='/intranet/caffeine/soda/edit/{{ s.id }}'>Edit</a>
+                <a class='btn btn-primary btn-small' href='{% url cm_soda_edit s.id  %}'>Edit</a>
                 {% if s.votes.count %}
-                    <a class="btn btn-danger btn-small" href='/intranet/caffeine/soda/clearvotes/{{ s.id }}'>Clear votes</a>
+                    <a class='btn btn-danger btn-small' href='{% url cm_soda_clearvotes s.id  %}'>Clear votes</a>
                 {% endif %}
             {% endif %}
             {% if s.votedFor %}
-                <a class="btn btn-danger btn-small" href='/intranet/caffeine/soda/vote/{{ s.id }}'>Unvote</a>
+                <a class='btn btn-danger btn-small' href='{% url cm_soda_vote s.id %}'>Unvote</a>
             {% else %}
-                <a class="btn btn-success btn-small" href='/intranet/caffeine/soda/vote/{{ s.id }}'>Vote</a>
+                <a class='btn btn-success btn-small' href='{% url cm_soda_vote s.id %}'>Vote</a>
             {% endif %}
         </td>
     </tr>
