--- a/liquid/templates/intranet/caffeine_manager/trays/edit_tray.html
+++ b/liquid/templates/intranet/caffeine_manager/trays/edit_tray.html
@@ -17,14 +17,14 @@
             {{ form }}
         </div>
 
-        <div id='edit-tray-buttons' >
+        <div class='edit-tray-buttons' >
             <button type="submit" class="btn btn-primary" >
                 {% if id %} Update {% else %} Add {% endif %}
             </button>
             {% if id %}
-                <a href="/intranet/caffeine/trays/delete/{{ id }}" class="btn btn-danger">Delete</a>
+                <a href="{% url cm_trays_delete {{ id }} %}" class="btn btn-danger">Delete</a>
             {% endif %}
-            <a href="/intranet/caffeine/trays/" class="btn btn-secondary">Cancel</a>
+            <a href="{% url cm_trays_trays %}" class="btn btn-secondary">Cancel</a>
         </div>
 
     </form>
