--- a/liquid/templates/intranet/caffeine_manager/leaderboard.html
+++ b/liquid/templates/intranet/caffeine_manager/leaderboard.html
@@ -17,7 +17,7 @@
         </tr>
 
     <h4>Calories consumed</h4>
-        {% for v in topCalories %}
+        {% for v in top_calories %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>
@@ -37,7 +37,7 @@
             <th class='caffeine-leaderboard-3'>Caffeine (mg)</th>
         </tr>
 
-        {% for v in topCaffeine %}
+        {% for v in top_caffeine %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>
@@ -57,7 +57,7 @@
             <th class='caffeine-leaderboard-3'>Spent</th>
         </tr>
 
-        {% for v in topSpent %}
+        {% for v in top_spent %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>
@@ -77,7 +77,7 @@
             <th class='caffeine-leaderboard-3'>Sodas</th>
         </tr>
 
-        {% for v in topSodas %}
+        {% for v in top_sodas %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>
