--- a/liquid/templates/intranet/caffeine_manager/user/edit_user.html
+++ b/liquid/templates/intranet/caffeine_manager/user/edit_user.html
@@ -23,7 +23,7 @@
             <button type="submit" class="btn btn-primary">Update</button>
         {% endif %}
 
-        <a href="{% url cm_soda_all_sodas %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url cm_user_view user.username %}" class="btn btn-secondary">Cancel</a>
     </div>
 
 </form>
