--- a/liquid/templates/intranet/caffeine_manager/leaderboard.html
+++ b/liquid/templates/intranet/caffeine_manager/leaderboard.html
@@ -1,4 +1,4 @@
-{% extends "intranet/base.html" %}
+{% extends "intranet/caffeine_manager/list_page.html" %}
 {% load bootstrap_pagination %}
 {% load bootstrap %}
 
@@ -6,8 +6,8 @@
     <link href="/static/css/caffeine-mgr.css" rel="stylesheet">
 {% endblock %}
 
-{% block intranet_content %}
-    <h2>Caffeine High Scores (of active members)</h2>
+{% block caffeine_content %}
+    <h3>Caffeine High Scores (of active members)</h3>
 
     <table class="table table-striped table-bordered">
         <tr>
