--- a/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
+++ b/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
@@ -1,56 +1,45 @@
-{% extends 'intranet/base.html' %}
+{% extends "intranet/caffeine_manager/list_page.html" %}
 {% load bootstrap_pagination %}
 {% load bootstrap %}
 
-{% block intranet_content %}
-<h2>All sodas</h2>
-<div class='well'>
-    <a class='btn btn-primary' href='{% url cm_trays_view %}'>Trays</a>
-    {% if is_caffeine_admin %}
-        <a class='btn btn-success' href='{% url cm_soda_add %}'>Add soda</a>
+{% block caffeine_content %}
+<h3>All Sodas</h3>
+    {% if sodasPage.end_index %}
+        <table class='table table-striped table-bordered'>
+            <tr>
+                <th>Name</th>
+                <th>Calories</th>
+                <th>Caffeine (mg)</th>
+                <th>Total Sold</th>
+                <th>Cost</th>
+                <th>Votes</th>
+                <th>Actions</th>
+            </tr>
+
+            {% for s in sodasPage %}
+            <tr>
+                <td>{{ s.name }}</td>
+                <td>{{ s.calories }}</td>
+                <td>{{ s.caffeine }}</td>
+                <td>{{ s.total_sold }}</td>
+                <td>{{ s.cost }}</td>
+                <td>{{ s.votes.count }}</td>
+                <td>
+                    {% if is_caffeine_admin %}
+                        <a class='btn btn-primary btn-small' href='{% url cm_soda_edit s.id  %}'>Edit</a>
+                        {% if s.votes.count %}
+                            <a class='btn btn-danger btn-small' href='{% url cm_soda_clearvotes s.id  %}'>Clear votes</a>
+                        {% endif %}
+                    {% endif %}
+                    {% if s.votedFor %}
+                        <a class='btn btn-danger btn-small' href='{% url cm_soda_vote s.id %}'>Unvote</a>
+                    {% else %}
+                        <a class='btn btn-success btn-small' href='{% url cm_soda_vote s.id %}'>Vote</a>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
     {% endif %}
-    <a class='btn' href='{% url cm_user_view %}'>Users</a>
-    <a class='btn' href='{% url cm_stats %}'>Leaderboard</a>
-</div>
-
-{% if sodasPage.end_index %}
-
-<table class='table table-striped table-bordered'>
-    <tr>
-        <th>Name</th>
-        <th>Calories</th>
-        <th>Caffeine (mg)</th>
-        <th>Total Sold</th>
-        <th>Cost</th>
-        <th>Votes</th>
-        <th>Actions</th>
-    </tr>
-
-    {% for s in sodasPage %}
-    <tr>
-        <td>{{ s.name }}</td>
-        <td>{{ s.calories }}</td>
-        <td>{{ s.caffeine }}</td>
-        <td>{{ s.total_sold }}</td>
-        <td>{{ s.cost }}</td>
-        <td>{{ s.votes.count }}</td>
-        <td>
-            {% if is_caffeine_admin %}
-                <a class='btn btn-primary btn-small' href='{% url cm_soda_edit s.id  %}'>Edit</a>
-                {% if s.votes.count %}
-                    <a class='btn btn-danger btn-small' href='{% url cm_soda_clearvotes s.id  %}'>Clear votes</a>
-                {% endif %}
-            {% endif %}
-            {% if s.votedFor %}
-                <a class='btn btn-danger btn-small' href='{% url cm_soda_vote s.id %}'>Unvote</a>
-            {% else %}
-                <a class='btn btn-success btn-small' href='{% url cm_soda_vote s.id %}'>Vote</a>
-            {% endif %}
-        </td>
-    </tr>
-    {% endfor %}
-</table>
-{% endif %}
-
-{% bootstrap_paginate sodasPage range=10 %}
+    {% bootstrap_paginate sodasPage range=10 %}
 {% endblock %}
