--- a/liquid/templates/intranet/caffeine_manager/leaderboard.html
+++ b/liquid/templates/intranet/caffeine_manager/leaderboard.html
@@ -1,4 +1,4 @@
-{% extends "intranet/caffeine_manager/list_page.html" %}
+{% extends 'intranet/caffeine_manager/list_page.html' %}
 {% load bootstrap_pagination %}
 {% load bootstrap %}
 
