--- a/liquid/templates/intranet/caffeine_manager/user/user.html
+++ b/liquid/templates/intranet/caffeine_manager/user/user.html
@@ -1,4 +1,4 @@
-{% extends "intranet/caffeine_manager/list_page.html" %}
+{% extends 'intranet/caffeine_manager/list_page.html' %}
 {% load bootstrap %}
 
 {% block top_styles %}
