Replace old amp URL with current Beats URL

--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -14,7 +14,7 @@
               <a href="https://www-s.acm.uiuc.edu/mailman/listinfo">Mailing Lists</a>
             </li>
             <li>
-              <a href="http://amp.acm.uiuc.edu">Beats by ACM</a>
+              <a href="https://www-s.acm.illinois.edu/beats/1104/">Beats by ACM</a>
             </li>
             <li>
               <a href="https://www-s.acm.uiuc.edu/confluence/">Wiki</a>
