Update contact page with current names

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -28,26 +28,26 @@
     
     <p><strong>System Administrators</strong><br>
        Calvin Shirley,
-       Dylan Nugent,
        Nathan Handler,
-       Josh Ginsburg,
        Adam Madsen,
        Eric Sauer,
-       Milan Dasgupta
+       Milan Dasgupta,
+       Jake Bailey,
+       Sam Fu,
+       Luke Liu
        <br>
        <a href="mailto:admin@acm.illinois.edu">admin@acm.illinois.edu</a>
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Nikoli Dryden, Jicong Wang, 
-        Nelson Osacky, Cole Gleason, 
+        Nikoli Dryden, Cole Gleason, 
         Nathan Handler, Clare Curtis,
         Calvin Shirley<br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
      
-     <p><strong>Social Chairs</strong><br>
-        Clare Curtis, Matthew Dierker<br>
+     <p><strong>Social Chair</strong><br>
+        Laura Licari<br>
         <a href="mailto:social@acm.illinois.edu">social@acm.illinois.edu</a>
      </p>
      
