Add content for new Projects Chair

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -45,6 +45,11 @@
         Calvin Shirley<br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
+
+     <p><strong>Projects Chair</strong><br>
+        Kevin Wang<br>
+        <a href="mailto:projects@acm.illinois.edu">projects@acm.illinois.edu</a>
+     </p>
      
      <p><strong>Social Chair</strong><br>
         Laura Licari<br>
