--- a/liquid/templates/intranet/caffeine_manager/trays/trays.html
+++ b/liquid/templates/intranet/caffeine_manager/trays/trays.html
@@ -9,7 +9,7 @@
     <tr>
         <th>ID</th>
         <th>Soda</th>
-        <th>Qty</th>
+        <th>Quantity</th>
         <th>Cost</th>
         {% if is_caffeine_admin %}
             <th>Enabled</th>
@@ -20,18 +20,18 @@
 
     {% for t in trays %}
     <tr>
-        <td>{{ t.tray_number }}</td>
+        <td>{{ t.tid }}</td>
         <td>{{ t.soda.name }}</td>
-        <td>{{ t.quantity }}</td>
+        <td>{{ t.qty }}</td>
         <td>{{ t.price }}</td>
         {% if is_caffeine_admin %}
             <td>{{ t.enabled }}</td>
-            <td>{{ t.detect_override }}</td>
+            <td>{{ t.sense_override }}</td>
             <td>
-                <a class="btn btn-small btn-primary" href='{% url cm_trays_edit t.id %}'>Edit Tray</a>
+                <a class="btn btn-small btn-primary" href='{% url cm_trays_edit t.tid %}'>Edit Tray</a>
                 {% if t.soda %}
-                    <a class="btn btn-small" href='{% url cm_soda_edit t.soda.id %}'>Edit Soda</a>
-                    <a class="btn btn-small btn-danger" href='{% url cm_trays_forcevend t.id %}'>Force Vend</a>
+                    <a class="btn btn-small" href='{% url cm_soda_edit t.soda.sid %}'>Edit Soda</a>
+                    <a class="btn btn-small btn-danger" href='{% url cm_trays_forcevend t.tid %}'>Force Vend</a>
                 {% endif %}
             </td>
         {% endif %}
