More transparent id names

--- a/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
+++ b/liquid/templates/intranet/caffeine_manager/soda/allsodas.html
@@ -26,15 +26,15 @@
         <td>{{ s.voteCount }}</td>
         <td>
             {% if is_caffeine_admin %}
-                <a class='btn btn-primary btn-small' href='{% url cm_soda_edit s.sid  %}'>Edit</a>
+                <a class='btn btn-primary btn-small' href='{% url cm_soda_edit s.id  %}'>Edit</a>
                 {% if s.voteCount %}
-                    <a class='btn btn-danger btn-small' href='{% url cm_soda_clearvotes s.sid  %}'>Clear votes</a>
+                    <a class='btn btn-danger btn-small' href='{% url cm_soda_clearvotes s.id  %}'>Clear votes</a>
                 {% endif %}
             {% endif %}
             {% if s.votedFor %}
-                <a class='btn btn-danger btn-small' href='{% url cm_soda_vote s.sid %}'>Unvote</a>
+                <a class='btn btn-danger btn-small' href='{% url cm_soda_vote s.id %}'>Unvote</a>
             {% else %}
-                <a class='btn btn-success btn-small' href='{% url cm_soda_vote s.sid %}'>Vote</a>
+                <a class='btn btn-success btn-small' href='{% url cm_soda_vote s.id %}'>Vote</a>
             {% endif %}
         </td>
     </tr>
