--- a/liquid/templates/intranet/caffeine_manager/trays/trays.html
+++ b/liquid/templates/intranet/caffeine_manager/trays/trays.html
@@ -20,7 +20,7 @@
 
     {% for t in trays %}
     <tr>
-        <td>{{ t.tid }}</td>
+        <td>{{ t.id }}</td>
         <td>{{ t.soda.name }}</td>
         <td>{{ t.qty }}</td>
         <td>{{ t.price }}</td>
@@ -28,10 +28,10 @@
             <td>{{ t.enabled }}</td>
             <td>{{ t.sense_override }}</td>
             <td>
-                <a class="btn btn-small btn-primary" href='{% url cm_trays_edit t.tid %}'>Edit Tray</a>
+                <a class="btn btn-small btn-primary" href='{% url cm_trays_edit t.id %}'>Edit Tray</a>
                 {% if t.soda %}
-                    <a class="btn btn-small" href='{% url cm_soda_edit t.soda.sid %}'>Edit Soda</a>
-                    <a class="btn btn-small btn-danger" href='{% url cm_trays_forcevend t.tid %}'>Force Vend</a>
+                    <a class="btn btn-small" href='{% url cm_soda_edit t.soda.id %}'>Edit Soda</a>
+                    <a class="btn btn-small btn-danger" href='{% url cm_trays_forcevend t.id %}'>Force Vend</a>
                 {% endif %}
             </td>
         {% endif %}
