Change uiuc links in about page to illinois ones

--- a/liquid/templates/about/main.html
+++ b/liquid/templates/about/main.html
@@ -73,9 +73,9 @@ made at these meetings.
 <h2>Links</h2>
 <ul>
   <li><a href="http://www.acm.org/">National ACM</a></li>
-  <li><a href="http://www.cs.uiuc.edu/">Department of Computer Science</a></li>
-  <li><a href="http://www.ece.uiuc.edu/">Department of ECE</a></li>
-  <li><a href="http://www.engr.uiuc.edu/">College of Engineering</a></li>
+  <li><a href="http://cs.illinois.edu/">Department of Computer Science</a></li>
+  <li><a href="http://ece.illinois.edu/">Department of ECE</a></li>
+  <li><a href="http://engineering.illinois.edu/">College of Engineering</a></li>
 </ul>
 </section>
 {% endblock %}
