Add link to join page

--- a/liquid/templates/registration/login.html
+++ b/liquid/templates/registration/login.html
@@ -16,7 +16,7 @@
 </div>
 <div class="span6">
   <p>Your username is your NetID. Your password is your Campus Active Directory password.</p>
-  <p>You must be an ACM Member to log into the Intranet.</p>
+  <p>You must be an ACM Member to log into the ACM Intranet. If you are not and would like to join ACM, please visit <a href='/about/join'>this page</a>.</p>
 </div>
 </div>
 {% endblock %}
