about: fix typo. Fixes #91

--- a/liquid/templates/about/main.html
+++ b/liquid/templates/about/main.html
@@ -8,16 +8,19 @@
 <h2>General Introduction</h2>
 
 <p>
-ACM@UIUC is a 501(c)(3) non-for-profit student chapter of the Association for
-Computing Machinery, a professional society dedicated to advancing human
-capabilities through information technology. Founded in 1947, the Association
-for Computing Machinery (ACM) is the largest and oldest international scientific
-and educational computer society in the industry today. Organized only a year
-after the unveiling of ENIAC, the first general purpose electronic computer, ACM
-was established by mathematicians and electrical engineers to advance the The
-student chapter at the University of Illinois was initially the Department of
-Computer Science's undergraduate student organization starting in 1965 and was
-officially formed as a student chapter of the ACM on November 1, 1967.
+ACM@UIUC is a 501(c)(3) non-for-profit student chapter of the
+Association for Computing Machinery, a professional society dedicated
+to advancing human capabilities through information
+technology. Founded in 1947, the Association for Computing Machinery
+(ACM) is the largest and oldest international scientific and
+educational computer society in the industry today. Organized only a
+year after the unveiling of ENIAC, the first general purpose
+electronic computer, ACM was established by mathematicians and
+electrical engineers to advance the science and application of
+information technology. The student chapter at the University of
+Illinois was initially the Department of Computer Science's
+undergraduate student organization starting in 1965 and was officially
+formed as a student chapter of the ACM on November 1, 1967.
 </p>
 
 <p>
