--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -7,22 +7,22 @@
   <div class="span6">
     <h2>Contacts</h2>
     <p><strong>Chair</strong><br>
-        Cole Gleason<br>
+        Sujay Khandekar<br>
         <a href="mailto:acm@illinois.edu">acm@illinois.edu</a>
     </p>
     
     <p><strong>Vice Chair</strong><br>
-        Matthew Dierker<br>
+        Laura Licari<br>
        <a href="mailto:vice-chair@acm.illinois.edu">vice-chair@acm.illinois.edu</a>
     </p>
     
     <p><strong>Treasurer</strong><br>
-       Austin Walters<br>
+       Sebastian Conybeare<br>
        <a href="mailto:treasurer@acm.illinois.edu">treasurer@acm.illinois.edu</a>
     </p>
     
     <p><strong>Secretary</strong><br>
-       Eva Shih<br>
+       Connie Fan<br>
        <a href="mailto:secretary@acm.illinois.edu">secretary@acm.illinois.edu</a>
     </p>
     
@@ -47,7 +47,7 @@
      </p>
 
      <p><strong>Projects Chair</strong><br>
-        Kevin Wang<br>
+        Kevin Wang, Milan Dasgupta<br>
         <a href="mailto:projects@acm.illinois.edu">projects@acm.illinois.edu</a>
      </p>
      
@@ -57,7 +57,7 @@
      </p>
      
      <p><strong>Banks Editor</strong><br>
-        Eva Shih<br>
+        Connie Fan<br>
         <a href="mailto:boneyard@acm.illinois.edu">boneyard@acm.illinois.edu</a>
       </p>
 
