more conference changes, corporate committee update on contact page

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -40,9 +40,10 @@
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Nikoli Dryden, Cole Gleason, 
-        Nathan Handler, Clare Curtis,
-        Calvin Shirley<br>
+        Zach Miller, Amanda Sopkin, 
+        Mike Parilla, Aashna Makkar
+        David Zmick, Karunya Tota,
+        Harshit Kumar <br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
 
