added various commas

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -40,9 +40,12 @@
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Zach Miller, Amanda Sopkin, 
-        Mike Parilla, Aashna Makkar
-        David Zmick, Karunya Tota,
+        Zach Miller,
+        Amanda Sopkin, 
+        Mike Parilla,
+        Aashna Makkar,
+        David Zmick,
+        Karunya Tota,
         Harshit Kumar <br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
